crates/ink/tests/ui/event/fail/name-override-missing.rs
#[ink::event(name)]
pub struct Event {
    #[ink(topic)]
    pub topic: [u8; 32],
    pub field_1: u32,
}

fn main() {}
