crates/ink/tests/ui/event/fail/name-override-missing.stderr
error: expected a string literal value for `name` attribute argument
 --> tests/ui/event/fail/name-override-missing.rs:1:14
  |
1 | #[ink::event(name)]
  |              ^^^^
